--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "micro-signals": "^2.4.0",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "react": "17.0.2",
