--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "micro-signals": "^2.4.0",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
+    "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "styled-components": "^5.3.3"
@@ -26,6 +27,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/numeral": "^2.0.2",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.3",
